gatekeeper/constraints/custom-constraint-maxreplicas.yaml
# Lab 1.3 - Custom Constraint
# Reject Deployment nếu replicas > 5
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxReplicas
metadata:
  name: max-replicas
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
  parameters:
    maxReplicas: 5
